# ukgov-metadata-exchange-model

./: .cruft.json  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  about.yaml  access-rights.json  available-organisations.json  cddo-context.json  cddo-data-resource-schema.json  cddo-data-resources-schema.json  cddo-data-service-schema.json  cddo-dataset-schema.json  cddo-distribution-schema.json  cddo-organisation-schema.json  cddo-organisations-schema.json  frequencies.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  security-classifications.json  service-status.json  service-types.json  sitemap.xml  status.json
AccessRightsValues/: index.html
Boolean/: index.html
CataloguedResource/: index.html
ContactPoint/: index.html
Curie/: index.html
DataResource/: index.html
DataService/: index.html
Dataset/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Distribution/: index.html
Double/: index.html
Float/: index.html
FrequencyValues/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
LICENSE/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Organisation/: index.html
OrganisationCollection/: index.html
OrganisationValues/: index.html
SecurityClassificationValues/: index.html
ServiceStatusValues/: index.html
ServiceTypeValues/: index.html
Sparqlpath/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
(+141 files in other folders)
